<resources>
    <string name="app_name">Vivan Flora</string>
    <string name="autochip_india">Autochip India</string>
    <string name="login">Login</string>
    <string name="prompt_id">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="create_order">Create Order</string>
    <string name="view_order">View Order</string>

    <string name="my_orders">My Orders</string>
    <string name="catalogue">Catalogue</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Coming soon</string>

    <!-- related to Create Order Fragment -->
    <string name="press_plus_button">Press the plus button below to create new order</string>
    <string name="delivery_date">Delivery Date :</string>
    <string name="save_order">Save Order</string>
    <string name="place_order">Place Order</string>

    <!-- related to view Order Fragment-->
    <string name="order_created">Order created</string>
    <string name="cancel_order">Cancel Order</string>

    <string name="add_item">Add Item</string>

    <!-- related to progress bar-->
    <string name="please_wait">Please wait&#8230;</string>

    <string name="rs">\u20B9</string>
</resources>
