<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".HomeScreenActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/toolBar"
                android:text="@string/app_name"
                android:layout_margin="10dp"
                android:textColor="@color/colorAccent"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <View
                android:id="@+id/view_shadow"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_gravity="bottom"
                android:background="@drawable/toolbar_shadow"
                android:visibility="visible" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/fl_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_create_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/create_order"
                    android:drawablePadding="15dp"
                    android:onClick="onClickOrderButton"
                    android:text="@string/create_order"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:id="@+id/btn_view_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/view_order"
                    android:drawablePadding="15dp"
                    android:onClick="onClickOrderButton"
                    android:text="@string/view_order"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>
        </FrameLayout>

    </FrameLayout>


</LinearLayout>