<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/activity_image_width"
        android:layout_height="@dimen/activity_image_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_margin_top_large"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/vivan_flora_logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin_default_small"
                android:layout_marginStart="@dimen/layout_margin_default_small"
                android:layout_marginTop="@dimen/layout_margin_top_medium"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_id"
                        android:imeOptions="actionNext"
                        android:inputType="number|phone"
                        android:maxLength="10"
                        android:maxLines="1"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_default_small">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionLabel="@string/login"
                        android:imeOptions="actionGo"
                        android:inputType="number|phone"
                        android:maxLines="1"
                        android:maxLength="10"
                        android:nextFocusDown="@+id/login"/>

                </android.support.design.widget.TextInputLayout>

                <!--android:inputType="textPassword"-->
               <!-- <LinearLayout
                    android:id="@+id/llVisibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_default_medium"
                    android:gravity="end"
                    android:orientation="horizontal">


                    <TextView
                        style="?android:textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/layout_margin_default_small"
                        android:text="@string/stay_signed_in"/>

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/cbReceiveInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/layout_height_small"
                        android:button="@null"
                        android:checked="false"
                        android:clickable="true"
                        android:drawableEnd="@drawable/checkbox_selector"
                        android:focusable="false"
                        android:background="?android:attr/selectableItemBackground"
                        android:textColor="@color/orange"/>
                </LinearLayout>-->

                <!--<Switch
                            android:id="@+id/switch1"
                            style="?android:textAppearanceMedium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/layout_margin_medium"
                            android:layout_marginTop="@dimen/layout_margin_medium"
                            android:text="@string/stay_signed_in"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/gray"/>-->
                <Button
                    android:id="@+id/btn_login"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="@dimen/layout_margin_default_medium"
                    android:background="@drawable/cornered_button"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"/>

                <!--<Button
                    android:id="@+id/btn_forgot_password"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin_small"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/action_forgot_password"
                    android:textAllCaps="false"/>-->

            </LinearLayout>
        </ViewFlipper>
    </ScrollView>

</LinearLayout>