<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".CreateOrderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--<Spinner
            android:id="@+id/spinner_vehicle"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:popupBackground="@android:color/white"
            android:scrollbars="vertical"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_background"
            android:textColorHint="@color/colorAccent" />-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/delivery_date"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rectangle"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:layout_marginEnd="8dp"
                android:background="@android:color/holo_green_light"
                android:text="@string/order_created"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </FrameLayout>

        <ScrollView
            android:id="@+id/sv_create_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.8">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:measureAllChildren="false"
                android:scrollbars="none">

                <TableLayout
                    android:id="@+id/tl_products"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </TableLayout>

            </HorizontalScrollView>
        </ScrollView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_margin="5dp"
            android:layout_weight=".2"
            android:background="@android:color/white"
            android:orientation="vertical">

            <View
                android:id="@+id/view_line_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@android:color/darker_gray"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="Total : "
                    android:textAppearance="@android:style/TextAppearance.Medium" />


                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="000.00 INR"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </FrameLayout>


            <View
                android:id="@+id/view_line_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:background="@android:color/darker_gray"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <LinearLayout
                android:id="@+id/ll_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_cancel_order"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:background="@drawable/cornered_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/cancel_order"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <!--<Button
                    android:id="@+id/btn_place_order"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/cornered_button"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/place_order"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_create_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:srcCompat="@drawable/circle_plus" />

</FrameLayout>